--- a/style/style.css
+++ b/style/style.css
@@ -592,17 +592,253 @@ pre {
     }
 }
 
-/* Tablets */
-@media (min-width: 601px) and (max-width: 900px) {
+/* Mobile Devices — Landscape (Horizontal) */
+@media (max-width: 900px) and (orientation: landscape) {
+    hr {
+        margin-bottom: 10vh;
+        margin-top: 10vh;
+    }
+    .nav_section {
+        display: none;
+    }
+    .main_container {
+        width: 100vw;
+    }
 
+    .header_icon {
+        width: 15vw;
+        margin-top: 5vh;
+        margin-bottom: 4vh;
+    }
+    
+    .header_title {
+        font-size: 3vw;
+        width: 90vw;
+        text-underline-offset: 1vh;
+        margin: 0 auto;
+        line-height: 9vh;
+        margin-bottom: 3vh;
+    }
+
+    .header_description, .section_description {
+        width: 90vw;
+        font-size: 2vw;
+    }
+
+    .header_subtitle, .section_subtitle {
+        width: 90vw;
+        font-size: 3vw;
+        margin: 0 auto;
+        margin-bottom: 5vh;
+    }
+
+    .header_list {
+        width: 90vw;
+        font-size: 2vw;
+    }
+
+    .header_list_object {
+        margin-bottom: 4vh;
+        margin-left: 8vw;
+    }
+
+    .section_title {
+        font-size: 3vw;
+        margin-bottom: 6vh;
+    }
+
+    .section_subtitle {
+        margin: 0 auto;
+        width: 90vw;
+        text-align: center;
+        margin-bottom: 5vh;
+    }
+
+    .code-header span {
+        font-size: 2vw;
+    }
+
+    .copy-btn {
+        font-size: 2vw;
+        padding: 1vh 3vw;
+    }
+
+    .input_equation_module, .advanced_equations_module {
+        width: 50vw;
+        margin-left: auto;
+        margin-right: auto;
+        display: flex;
+        align-items: center;
+    }
+
+    #equation_input, #advanced_input {
+        width: 70%;
+        font-size: 3vw;
+        margin: 1vh 0;
+    }
+
+    #result_display, #advanced_result_display {
+        font-size: 3vw;
+        margin: 2vh 0;
+    }
+
+    .calculate_button {
+        font-size: 2vw;
+        padding: 1vh 3vw;
+    }
+
+    .button_click_module {
+        width: 35vw;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .calculator {
+        width: 100%;
+        font-size: 3vw;
+        padding: 1vh 2vw;
+    }
+
+    .buttons {
+        gap: 3vw;
+        margin-top: 3vh;
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    .btn {
+        font-size: 2vw;
+        padding: 2vh 0;
+    }
+
+    #button_display {
+        font-size: 3vw;
+        margin: 2vh 0;
+    }
 }
 
-/* Laptops */
-@media (min-width: 901px) and (max-width: 1200px) {
+/* Tablets — Portrait (Vertical) */
+@media (min-width: 601px) and (max-width: 900px) and (orientation: portrait) {
+    hr {
+        margin-bottom: 10vh;
+        margin-top: 10vh;
+    }
+    .nav_section {
+        display: none;
+    }
+    .main_container {
+        width: 100vw;
+    }
 
+    .header_icon {
+        width: 25vw;
+        margin-top: 10vh;
+    }
+    
+    .header_title {
+        font-size: 7vw;
+        width: 90vw;
+        text-underline-offset: 1vh;
+        margin: 0 auto;
+        line-height: 9vh;
+    }
+
+    .header_description, .section_description {
+        width: 90vw;
+        font-size: 3.5vw;
+    }
+
+    .header_subtitle, .section_subtitle {
+        width: 90vw;
+        font-size: 6vw;
+        margin: 0 auto;
+        margin-bottom: 5vh;
+    }
+
+    .header_list {
+        width: 90vw;
+        font-size: 4vw;
+    }
+
+    .header_list_object {
+        margin-bottom: 4vh;
+        margin-left: 8vw;
+    }
+
+    .section_title {
+        font-size: 8vw;
+        margin-bottom: 6vh;
+    }
+
+    .section_subtitle {
+        margin: 0 auto;
+        width: 90vw;
+        text-align: center;
+        margin-bottom: 5vh;
+    }
+
+    .code-header span {
+        font-size: 3vw;
+    }
+
+    .copy-btn {
+        font-size: 3vw;
+        padding: 1vh 3vw;
+    }
+
+    .input_equation_module, .advanced_equations_module {
+        width: 90vw;
+        margin-left: auto;
+        margin-right: auto;
+        display: flex;
+        align-items: center;
+    }
+
+    #equation_input, #advanced_input {
+        width: 80%;
+        font-size: 5vw;
+        margin: 2vh 0;
+    }
+
+    #result_display, #advanced_result_display {
+        font-size: 6vw;
+        margin: 2vh 0;
+    }
+
+    .calculate_button {
+        font-size: 5vw;
+        padding: 1vh 3vw;
+    }
+
+    .button_click_module {
+        width: 90vw;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .calculator {
+        width: 90%;
+        font-size: 6vw;
+        padding: 1vh 2vw;
+    }
+
+    .buttons {
+        gap: 3vw;
+        margin-top: 3vh;
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    .btn {
+        font-size: 5vw;
+        padding: 2vh 0;
+    }
+
+    #button_display {
+        font-size: 6vw;
+        margin: 2vh 0;
+    }
 }
 
-/* Desktops */
-@media (min-width: 1201px) {
-
+/* Tablets — Landscape (Horizontal) */
+@media (min-width: 601px) and (max-width: 900px) and (orientation: landscape) {
+    
 }
